crates/takkie-tui/src/ui/snapshots/takkie__ui__tui__tests__screen_while_transmitting_with_an_error_in_the_log.snap
---
source: crates/takkie-tui/src/ui/tui.rs
expression: "screen(&app, &state)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                  🎵  local-takkie   Kitchen   channel 2   port 5000   192.168.1.2                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌👥  Peers (2 on your channel, 3 in all)────────────────────┐┌📋  Events Log─────────────────────────┐
│● Bedroom              ch 2  now                          ││[12:00:07] ⚠️  output lost, retrying   │
│○ 0000000000000003     ch 2  now                          ││[12:00:08] ❌  mic stopped device=Heads│
│○ Office               ch 5  now                          ││  et                                  │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🎤  Push-to-Talk (HOLD SPACE to talk)──────────────────────┐│                                      │
│         🔴  TRANSMITTING (Bedroom is talking too)         ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🔊  Levels─────────────────────────────────────────────────┐│                                      │
│Mic      ████████████████████████████████████████████░░░░░││                                      │
│Speaker  ████████████████████████████████████████░░░░░░░░░││                                      │
│Buffer  48 ms    Volume  70%    Beeps  off  MUTED         ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                            HOLD SPACE to talk | ? keys | Q or ESC quit                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
