crates/takkie-tui/src/ui/snapshots/takkie__ui__tui__tests__screen_with_a_picked_peer_and_a_muted_one.snap
---
source: crates/takkie-tui/src/ui/tui.rs
expression: "screen(&app, &state)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                  🎵  local-takkie   Kitchen   channel 2   port 5000   192.168.1.2                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌👥  Peers (2 on your channel, 3 in all)────────────────────┐┌📋  Events Log─────────────────────────┐
│  ● Bedroom              ch 2  now  🔇  muted              ││                                      │
│▶ ○ 0000000000000003     ch 2  now                        ││                                      │
│  ○ Office               ch 5  now                        ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🎤  Push-to-Talk (SPACE starts and stops talking)──────────┐│                                      │
│                🟡  BUSY: Bedroom is talking               ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🔊  Levels─────────────────────────────────────────────────┐│                                      │
│Mic      ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Speaker  ████████████████████████████████████████░░░░░░░░░││                                      │
│Buffer  48 ms    Volume  100%                             ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                      SPACE starts and stops talking | ? keys | Q or ESC quit                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
