crates/takkie-tui/src/ui/snapshots/takkie__ui__tui__tests__screen_with_nobody_around.snap
---
source: crates/takkie-tui/src/ui/tui.rs
expression: "screen(&app(), &snapshot(Vec::new()))"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                  🎵  local-takkie   Kitchen   channel 2   port 5000   192.168.1.2                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌👥  Peers (0 on your channel, 0 in all)────────────────────┐┌📋  Events Log─────────────────────────┐
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🎤  Push-to-Talk (SPACE starts and stops talking)──────────┐│                                      │
│                          🟢  FREE                         ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🔊  Levels─────────────────────────────────────────────────┐│                                      │
│Mic      ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Speaker  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Buffer  0 ms    Volume  100%    Beeps  off                ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                      SPACE starts and stops talking | ? keys | Q or ESC quit                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
