crates/takkie-tui/src/ui/snapshots/takkie__ui__tui__tests__screen_with_peers_and_one_talking.snap
---
source: crates/takkie-tui/src/ui/tui.rs
expression: "screen(&app, &talking_peers())"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                  🎵  local-takkie   Kitchen   channel 2   port 5000   192.168.1.2                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌👥  Peers (2 on your channel, 3 in all)────────────────────┐┌📋  Events Log─────────────────────────┐
│● Bedroom              ch 2  now                          ││[12:00:01] ✅  Bedroom joined (ch 2)   │
│○ 0000000000000003     ch 2  now                          ││[12:00:05] 🗣️  Bedroom is talking      │
│○ Office               ch 5  now                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🎤  Push-to-Talk (HOLD SPACE to talk)──────────────────────┐│                                      │
│                        ⚫  STANDBY                        ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🔊  Levels─────────────────────────────────────────────────┐│                                      │
│Mic      ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Speaker  ████████████████████████████████████████░░░░░░░░░││                                      │
│Buffer  48 ms    Volume  100%                             ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                            HOLD SPACE to talk | ? keys | Q or ESC quit                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
