crates/takkie-tui/src/ui/snapshots/takkie__ui__tui__tests__screen_with_the_help_popup.snap
---
source: crates/takkie-tui/src/ui/tui.rs
expression: "screen(&app, &talking_peers())"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                  🎵  local-takkie   Kitchen   channel 2   port 5000   192.168.1.2                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌👥  Peers (2 on your channel, 3 in all)────────────────────┐┌📋  Events Log─────────────────────────┐
│● Bedroom              ch 2  now                          ││                                      │
│○ 0000000000000003     ch 2  now                          ││                                      │
│○ Office               ch 5  now                          ││                                      │
│                  ┌❓  Keys (any key closes)────────────────────────────────────┐                  │
│                  │ SPACE    talk (hold or toggle, see the footer)             │                  │
│                  │ T        switch between hold and toggle                    │                  │
│                  │ M        mute or unmute what you hear                      │                  │
│                  │ + / -    volume up or down                                 │                  │
└──────────────────│ D        show the microphone and speaker in use            │                  │
┌🎤  Push-to-Talk (S│ 1-9, 0   switch to channel 1 to 10                         │                  │
│                  │ ?        this help                                         │                  │
└──────────────────│ Q / Esc  quit                                              │                  │
┌🔊  Levels─────────└────────────────────────────────────────────────────────────┘                  │
│Mic      ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Speaker  ████████████████████████████████████████░░░░░░░░░││                                      │
│Buffer  48 ms    Volume  100%                             ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                      SPACE starts and stops talking | ? keys | Q or ESC quit                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
