crates/takkie-tui/src/ui/snapshots/takkie__ui__tui__tests__the_passphrase_popup_never_shows_what_was_typed.snap
---
source: crates/takkie-tui/src/ui/tui.rs
expression: shown
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                  🎵  local-takkie   Kitchen   channel 2   port 5000   192.168.1.2                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌👥  Peers (0 on your channel, 0 in all)────────────────────┐┌📋  Events Log─────────────────────────┐
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                 ┌🔒  Passphrase for channel 2 (hidden)──────────────────────────┐                 │
│                 │ •••••••••••••                                                │                 │
│                 │                                                              │                 │
└─────────────────│ Enter sets it · empty makes the channel open · Esc cancels   │                 │
┌🎤  Push-to-Talk (└──────────────────────────────────────────────────────────────┘                 │
│                          🟢  FREE                         ││                                      │
└──────────────────────────────────────────────────────────┘│                                      │
┌🔊  Levels─────────────────────────────────────────────────┐│                                      │
│Mic      ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Speaker  ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░││                                      │
│Buffer  0 ms    Volume  100%                              ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                      SPACE starts and stops talking | ? keys | Q or ESC quit                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
